django-sitemessage changelog
============================


Unreleased
----------
! Renamed bogus 'SITEMESSAGE_DEFAULT_SHORTCUT_EMAIL_MESSAGES_TYPE' setting into 'SITEMESSAGE_SHORTCUT_EMAIL_MESSENGER_TYPE'.
+ Added dispaches delivery retry in admin (closes #8).
+ SMTPMessenger. Added SSL support (closes #10).
+ SMTPMessenger. Added timeout support (closes #9).


v0.10.0
-------
+ Added 'sitemessage_cleanup' command and 'cleanup_sent_messages()' function (closes #5).
+ Added 'sitemessage_probe' command and 'send_test_message()' function (closes #6).
+ Sending became distributed system friendlier (closes #4).


v0.9.1
------
* Updated VKontakte messenger to conform to new rules.


v0.9.0
------
+ Django 2.0 basic compatibility.
* Dropped support for Python<3.4 and Django<1.7.


v0.8.4
------
* Django 1.11 compatibility improvements.


v0.8.3
------
* Package distribution fix.


v0.8.2
------
* `Message.get_subscribers()` now returns only active users by default.


v0.8.1
------
* Django 1.10 compatibility improved.


v0.8.0
------
+ Implemented VKontakte messenger.
+ Implemented Facebook messenger.


v0.7.2
----------
* Template compilation errors are now considered dispatch errors and properly logged.


v0.7.1
------
* Django 1.9 compatibility improvements.


v0.7.0
------
+ Implemented Telegram messenger.
+ Added `allow_user_subscription` attr to base message and messenger classes.
+ Added schedule_tweet() shortcut.
+ Added schedule_telegram_message() shortcut.
+ Added Messenger.before_after_send_handling() context manager.
* Fixed `get_user_preferences_for_ui()` producing buggy result.


v0.6.0
------
+ Adapted for Django 1.8.
* Russian locale is updated.


v0.5.1
------
* Message.schedule() now respects message type priority attribute.
* `SITEMESSAGE_EMAIL_BACKEND_MESSAGES_PRIORITY` now defaults to None.


v0.5.0
------
* IMPORTANT: Package layout changed (messages, messengers locations changed).
* IMPORTANT: Changed default templates search path.